# af_project_main

./: .gitignore  .gitmodules  CMakeLists.txt  diff_history.sh  doxygen  projects.qbs
resources/: CMakeLists.txt  resource.qbs
resources/accounting/: CMakeLists.txt  license.html
resources/admin/: CMakeLists.txt  license.html
resources/af_base/: CMakeLists.txt  af_base.qrc  rc.qrc
resources/agriculture/: CMakeLists.txt  agriculture.qbs  license.html
resources/analytics/: CMakeLists.txt  analytics.qbs  rc_analytics.qrc
resources/ancestry/: CMakeLists.txt  ancestry.qbs  rc_ancestry.qrc
resources/arctic/: CMakeLists.txt  rc.qrc
resources/artificialIntelligence/: CMakeLists.txt  artificialIntelligence.qbs  license.html  rc.qrc
resources/audio_set/: CMakeLists.txt  license.html
resources/autumn/: CMakeLists.txt
resources/awards/: CMakeLists.txt  license.html  rc_awards.qrc
resources/banking/: CMakeLists.txt  license.html  rc.qrc
resources/basic/: CMakeLists.txt  rc_basic.qrc
resources/biology/: CMakeLists.txt  biology.qbs
resources/biometrics/: CMakeLists.txt  license.html  rc_biometrics.qrc
resources/bloodDonation/: CMakeLists.txt  license.html
resources/business/: CMakeLists.txt  business.qbs  rc.qrc
resources/business_1/: CMakeLists.txt  business_1.qbs  license.html
resources/business_and_finance/: CMakeLists.txt
resources/character/: CMakeLists.txt  character.qbs  license.html  rc.qrc  rc_character.qrc
resources/city_park/: CMakeLists.txt  license.html
resources/cityscape/: CMakeLists.txt  license.html
resources/cleaning/: CMakeLists.txt  cleaning.qbs
resources/communication/: CMakeLists.txt  communication.qbs  license.html
resources/communication_1/: CMakeLists.txt  communication_1.qbs  rc.qrc
resources/construction/: CMakeLists.txt  construction.qbs  rc.qrc
resources/countrysFlags/: CMakeLists.txt  countrysFlags.qbs  license.html
resources/cryptoCurrency/: CMakeLists.txt  rc.qrc
resources/cyberMonday/: CMakeLists.txt  cyberMonday.qbs  rc.qrc  rc_cyberMonday.qrc
resources/cyber_bullying/: CMakeLists.txt  rc_cyber_bullying.qrc
resources/dataAndGraphs/: CMakeLists.txt  dataAndGraphs.qbs  license.html  rc.qrc
resources/dataProtection/: CMakeLists.txt  dataProtection.qbs  license.html  rc.qrc
resources/dataScience/: CMakeLists.txt  dataScience.qbs  license.html  rc_dataScience.qrc
resources/delivery/: CMakeLists.txt  delivery.qbs
resources/delivery_1/: CMakeLists.txt  license.html  rc_delivery_1.qrc
resources/designTools/: CMakeLists.txt  license.html  rc_designTools.qrc
resources/development/: CMakeLists.txt
resources/dialogue/: CMakeLists.txt  dialogue.qbs
resources/digitalMarketing/: CMakeLists.txt  rc.qrc
resources/document_and_files/: CMakeLists.txt  rc_document_and_files.qrc
resources/domotic/: CMakeLists.txt  domotic.qbs  license.html
resources/ecology/: CMakeLists.txt  ecology.qbs  license.html  rc_ecology.qrc
resources/economicalGrowth/: CMakeLists.txt  economicalGrowth.qbs
resources/education/: CMakeLists.txt  license.html  rc_education.qrc
resources/educationElements/: CMakeLists.txt  rc_educationElements.qrc
resources/essential/: CMakeLists.txt  essential.qbs  rc.qrc
resources/fair/: CMakeLists.txt  fair.qbs  license.html  rc.qrc
resources/familyLife/: CMakeLists.txt  familyLife.qbs  license.html
resources/fantasy/: CMakeLists.txt  fantasy.qbs  license.html  rc.qrc
resources/file/: CMakeLists.txt  rc_file.qrc
resources/fileFolder/: CMakeLists.txt  license.html  rc.qrc
resources/finance/: CMakeLists.txt  finance.qbs  license.html  rc_finance.qrc
resources/financeAndAccounting/: CMakeLists.txt  financeAndAccounting.qbs
resources/flags/: CMakeLists.txt  license.html
resources/font_awesome/: CMakeLists.txt  font_awesome.qbs  rc.qrc
resources/gaming/: CMakeLists.txt
resources/gardening/: CMakeLists.txt  gardening.qbs  rc_gardening.qrc
resources/gastronomy/: CMakeLists.txt  gastronomy.qbs
resources/geneticsAndBioengineering/: CMakeLists.txt  geneticsAndBioengineering.qbs  rc.qrc
resources/geography/: CMakeLists.txt  geography.qbs  license.html  rc_geography.qrc
resources/germany/: CMakeLists.txt  license.html
resources/google/: CMakeLists.txt  google.qbs  license.html  rc.qrc
resources/gym/: CMakeLists.txt  gym.qbs  rc_gym.qrc
resources/hairstyles/: CMakeLists.txt
resources/healthyFood/: CMakeLists.txt  healthyFood.qbs
resources/home/: CMakeLists.txt  rc_home.qrc
resources/hotelServices/: CMakeLists.txt  license.html
resources/household/: CMakeLists.txt  license.html
resources/humanMind/: CMakeLists.txt  humanMind.qbs  license.html  rc.qrc
resources/influencer_marketing/: CMakeLists.txt
resources/interaction/: CMakeLists.txt  interaction.qbs  license.html  rc_interaction.qrc
resources/internationalFlags/: CMakeLists.txt  rc.qrc
resources/investing/: CMakeLists.txt  license.html
resources/literature/: CMakeLists.txt  license.html  rc_literature.qrc
resources/marketing/: CMakeLists.txt  license.html  marketing.qbs  rc_marketing.qrc
resources/material_design/: CMakeLists.txt  license.html
resources/medical/: CMakeLists.txt  license.html  medical.qbs
resources/medical_1/: CMakeLists.txt  license.html
resources/medical_2/: CMakeLists.txt  license.html  medical_2.qbs
resources/medieval/: CMakeLists.txt  rc.qrc
resources/money/: CMakeLists.txt  license.html
resources/money_1/: CMakeLists.txt  rc.qrc
resources/money_service/: CMakeLists.txt  license.html  money_service.qbs
resources/newsMedia/: CMakeLists.txt  license.html  newsMedia.qbs  rc.qrc
resources/office/: CMakeLists.txt  office.qbs
resources/oil_gas/: CMakeLists.txt  oil_gas.qbs  rc.qrc
resources/online_shop/: CMakeLists.txt  rc_online_shop.qrc
resources/origami/: CMakeLists.txt  rc_origami.qrc
resources/pins/: CMakeLists.txt  license.html  pins.qbs
resources/pirate/: CMakeLists.txt  license.html
resources/pokemonGo/: CMakeLists.txt  license.html  pokemonGo.qbs  rc_pokemonGo.qrc
resources/professionAvatars/: rc.qrc  (+3 more)
source/: CMakeLists.txt  doc.sh
(+345 files in other folders)
